# rugia

./: Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs  scene.rs  visual.rs
src/scene/penguin/: arrays.i16  elements.u16
src/visual/: generated.rs  gl.rs  glfw.rs  vector.rs  webp.rs
src/visual/shaders/: default.frag  default.vert
